view360/main/default/objects/V360_Card__c/V360_Card__c.object-meta.xml
<CustomObject>
    <description>Vista 360 card catalog entry: component binding, tab placement, presentation (label, icon, order), and kill-switch. End users have no direct read access; the server returns only the cards visible to the user. Field history is tracked for auditability.</description>
    <label>V360 Card</label>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>V360 Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>