view360/main/default/objects/V360_Card__c/fields/ButtonLabel__c.field-meta.xml
<CustomField>
    <fullName>ButtonLabel__c</fullName>
    <label>Button Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>