view360/main/default/objects/V360_Card__c/fields/ComponentName__c.field-meta.xml
<CustomField>
    <fullName>ComponentName__c</fullName>
    <description>Bound component name. For LWC cards: a component exposed in the Vista 360 shell registry (chosen from a constrained list in the admin UI). For Flow cards: the API name of an active screen flow, validated on save.</description>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>