view360/main/default/objects/V360_Card__c/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <description>SLDS icon name, e.g. "utility:einstein" or "standard:account".</description>
    <label>Icon Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>