view360/main/default/objects/V360_Card__c/validationRules/DeveloperNameIsImmutable.validationRule-meta.xml
<ValidationRule>
    <fullName>DeveloperNameIsImmutable</fullName>
    <active>true</active>
    <description>Config is upserted between orgs on this external id. Renaming makes the next import insert a duplicate card instead of updating this one, and the tab then renders both. ISCHANGED is false on insert, so this fires only on update.</description>
    <errorConditionFormula>ISCHANGED(DeveloperName__c)</errorConditionFormula>
    <errorDisplayField>DeveloperName__c</errorDisplayField>
    <errorMessage>A card&apos;s developer name cannot change: configuration is upserted between orgs on it, so renaming would duplicate this card on the next deployment. Change the label instead.</errorMessage>
</ValidationRule>